--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -3,6 +3,11 @@ name: Update Maven Dependencies and Confluence (Reusable)
 on:
   workflow_call:
     inputs:
+      environment:
+        description: 'Deployment environment (dev, staging, production)'
+        type: string
+        required: false
+        default: 'dev'
       pom_file_path:
         description: 'Path to the directory containing pom.xml'
         type: string
@@ -42,6 +47,7 @@ jobs:
     permissions:
       contents: write  # Required to push changes to the repository
     runs-on: ubuntu-latest
+    environment: ${{ inputs.environment }}
     
     steps:
       - name: Checkout repository
