remove cron job config

--- a/.github/workflows/update-dependencies-caller.yml
+++ b/.github/workflows/update-dependencies-caller.yml
@@ -1,9 +1,9 @@
 name: Update Maven Dependencies - Caller
 
 on:
-  schedule:
+#  schedule:
     # Run every Monday at 9 AM UTC
-    - cron: '0 9 * * 1'
+#    - cron: '0 9 * * 1'
   workflow_dispatch:
     inputs:
       environment:
