--- a/.github/workflows/maven-package.yml
+++ b/.github/workflows/maven-package.yml
@@ -17,6 +17,11 @@ on:
         type: string
         required: false
         default: 'java/my-app'
+      tag:
+        description: 'Tag to deploy (required for staging/production, ignored for dev)'
+        type: string
+        required: false
+        default: ''
 
 jobs:
   package:
@@ -28,6 +33,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          ref: ${{ inputs.environment == 'dev' && '' || inputs.tag }}
       
       - name: Set up JDK 17
         uses: actions/setup-java@v4
