--- a/.github/workflows/maven-package.yml
+++ b/.github/workflows/maven-package.yml
@@ -39,6 +39,14 @@ jobs:
       artifact-name: ${{ steps.extract-version.outputs.name }}
     
     steps:
+      - name: Validate tag for non-dev environments
+        if: ${{ inputs.environment != 'dev' && inputs.tag == '' }}
+        run: |
+          echo "❌ Error: Tag is required for non-dev environments"
+          echo "Environment: ${{ inputs.environment }}"
+          echo "Please provide a tag when deploying to sit, uat, or prd"
+          exit 1
+      
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
@@ -235,3 +243,38 @@ jobs:
           echo "- 🇺🇸 US CloudHub (us-east-1)" >> $GITHUB_STEP_SUMMARY
           echo "- 🇪🇺 EU CloudHub (eu-west-1)" >> $GITHUB_STEP_SUMMARY
           echo "- 📦 Nexus Repository" >> $GITHUB_STEP_SUMMARY
+
+  # Job 5: Tag Release (Dev only)
+  tag-release:
+    name: Tag Release
+    needs: [package-and-publish, deploy-us, deploy-eu]
+    if: ${{ always() && inputs.environment == 'dev' && needs.package-and-publish.result == 'success' && (needs.deploy-us.result == 'success' || needs.deploy-eu.result == 'success') }}
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      
+      - name: Create and push tag
+        run: |
+          VERSION="${{ needs.package-and-publish.outputs.artifact-version }}"
+          TAG_NAME="${VERSION}"
+          
+          echo "═══════════════════════════════════════════════════════"
+          echo "🏷️  CREATING RELEASE TAG"
+          echo "═══════════════════════════════════════════════════════"
+          echo ""
+          echo "Version: $VERSION"
+          echo "Tag: $TAG_NAME"
+          echo ""
+          
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          
+          # Create annotated tag
+          git tag -a "$TAG_NAME" -m "Release $TAG_NAME - deployed from dev"
+          
+          # Push tag to repository
+          git push origin "$TAG_NAME"
+          
+          echo "✓ Tag $TAG_NAME created and pushed successfully"
