display version in logs

--- a/.github/workflows/maven-package.yml
+++ b/.github/workflows/maven-package.yml
@@ -264,7 +264,7 @@ jobs:
           echo "🏷️  CREATING RELEASE TAG"
           echo "═══════════════════════════════════════════════════════"
           echo ""
-          echo "Version: $VERSION"
+          echo "Version (from pom.xml): $VERSION"
           echo "Tag: $TAG_NAME"
           echo ""
           
