update workflow with run-name

--- a/.github/workflows/maven-package-caller.yml
+++ b/.github/workflows/maven-package-caller.yml
@@ -1,5 +1,7 @@
 name: Mulesoft RTF Deploy(Mock)
 
+run-name: "Deploy ${{ inputs.environment }}${{ inputs.tag && format(' v{0}', inputs.tag) || '' }} [${{ inputs.deploy_us && inputs.deploy_eu && 'US+EU' || inputs.deploy_us && 'US' || inputs.deploy_eu && 'EU' || 'None' }}]"
+
 on:
   workflow_dispatch:
     inputs:
