update release tag formatting

--- a/.github/workflows/maven-package.yml
+++ b/.github/workflows/maven-package.yml
@@ -306,7 +306,7 @@ jobs:
       - name: Create production release tag
         run: |
           VERSION="${{ needs.package-and-publish.outputs.artifact-version }}"
-          PROD_TAG="release-${VERSION}"
+          PROD_TAG="PRD-${VERSION}"
           
           echo "═══════════════════════════════════════════════════════"
           echo "🚀 CREATING PRODUCTION RELEASE TAG"
