--- a/.github/workflows/maven-package.yml
+++ b/.github/workflows/maven-package.yml
@@ -28,6 +28,11 @@ on:
         type: boolean
         required: false
         default: true
+      branch:
+        description: 'Branch to deploy (for dev environment, feature-* branches skip tagging)'
+        type: string
+        required: false
+        default: 'develop'
 
 jobs:
   # Job 1: Package and Push to Anypoint Exchange
@@ -50,7 +55,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          ref: ${{ inputs.environment == 'dev' && '' || inputs.tag }}
+          ref: ${{ inputs.environment == 'dev' && inputs.branch || inputs.tag }}
       
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -244,11 +249,11 @@ jobs:
           echo "- 🇪🇺 EU CloudHub (eu-west-1)" >> $GITHUB_STEP_SUMMARY
           echo "- 📦 Nexus Repository" >> $GITHUB_STEP_SUMMARY
 
-  # Job 5: Tag Release (Dev only)
+  # Job 5: Tag Release (Dev only, skip for feature branches)
   tag-release:
     name: Tag Release
     needs: [package-and-publish, deploy-us, deploy-eu]
-    if: ${{ always() && inputs.environment == 'dev' && needs.package-and-publish.result == 'success' && (needs.deploy-us.result == 'success' || needs.deploy-eu.result == 'success') }}
+    if: ${{ always() && inputs.environment == 'dev' && !startsWith(inputs.branch, 'feature-') && needs.package-and-publish.result == 'success' && (needs.deploy-us.result == 'success' || needs.deploy-eu.result == 'success') }}
     runs-on: ubuntu-latest
     
     steps:
